sort menu items, add separator